--- a/reference/common/schemas/filters-model.yaml
+++ b/reference/common/schemas/filters-model.yaml
@@ -52,36 +52,43 @@ properties:
         items:
           type: string
         type: array
+        description: Sygnatura ogłoszenia w MSiG
         title: Msig Signature
       regon:
         items:
           type: string
         type: array
+        description: Numer REGON podmiotu
         title: Regon
       krz_signature:
         items:
           type: string
         type: array
+        description: Sygnatura ogłoszenia w KRZ
         title: Krz Signature
       krs:
         items:
           type: string
         type: array
+        description: Numer KRS podmiotu
         title: Krs
       pesel:
         items:
           type: string
         type: array
+        description: Numer PESEL
         title: Pesel
       nip:
         items:
           type: string
         type: array
+        description: Numer NIP podmiotu
         title: Nip
       name:
         items:
           type: string
         type: array
+        description: Imię i nazwisko
         title: Name
     title: ContentFiltersModel
   items_count:
